--- a/navbar.css
+++ b/navbar.css
@@ -1,3 +1,12 @@
 .nav-color {
     background-color: #4CAF50;
 }
+
+.navbar-brand > img {
+    height: 7%;
+    border-radius: 50%;
+}
+
+.navbar-brand {
+    font-family: cursive;
+}
